--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="build/stencil-tailwind.css" />
 </head>
 
-<body>
-  <my-tabs active-tab="Tab2">
-    <my-tab name="Tab1">Home</my-tab>
-    <my-tab name="Tab2" active>Task List</my-tab>
+<body class="ml-5">
+  <my-tabs active-tab="Tab2" class="text-2xl">
+    <my-tab name="Tab1">Accueil</my-tab>
+    <my-tab name="Tab2" active>Agenda</my-tab>
   </my-tabs>
   <br />
   <task-list></task-list>
