--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="ml-5">
+  <!-- Je n'ai pas réussi à ajouter le contenu dans les fragments, cependant le changement de statut s'effectue bien -->
   <my-tabs active-tab="Tab2" class="text-2xl">
     <my-tab name="Tab1">Accueil</my-tab>
     <my-tab name="Tab2" active>Agenda</my-tab>
